-In "What We Do" , text added with each image -CSS modified to show image in "What is Influencer Marketing"

--- a/app/views/public/brand_home.html.erb
+++ b/app/views/public/brand_home.html.erb
@@ -79,7 +79,7 @@
       </div>
       <div class="what-we-do-block">
         <span class="image"><%= image_tag('what_we_do4.png', :class => 'what-we-do-picture') %></span>
-        <span class="textual"> Demographics/Audience </span>
+        <span class="textual"> Demographics/ Audience </span>
       </div>
       <div class="what-we-do-block">
         <span class="image"><%= image_tag('what_we_do5.png', :class => 'what-we-do-picture') %></span>
@@ -145,7 +145,7 @@
     </br>
     </br>
     <div class="text-block helvetica-neue-light">
-      Sign up now to get seen on social media
+      Sign Up Now to Get Seen on Social Media
     </div>
   </div>
 </div>
