--- a/app/assets/stylesheets/brands_home.scss
+++ b/app/assets/stylesheets/brands_home.scss
@@ -971,6 +971,12 @@ body > .sticky-footer-wrapper{
   display: inline-block;
 }
 
+@media screen and (min-width: 768px) {
+  .what-is-influencer-marketing .influencer-marketing-image-medium {
+    display: none;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .what-is-influencer-marketing .influencer-marketing-image-right {
     display: none;
@@ -993,12 +999,6 @@ body > .sticky-footer-wrapper{
 
   .what-is-influencer-marketing .text-description {
     padding-bottom: 15px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .what-is-influencer-marketing .influencer-marketing-image-medium {
-    display: none;
   }
 }
 
@@ -1051,10 +1051,9 @@ body > .sticky-footer-wrapper{
 }
 
 .what-we-do-block .textual {
-  color: #ffffff;
+  color: #00aeef;
   font-size: 20px;
-  font-family: 'Varela', sans-serif;
-  font-weight: 400;
+  font-family: Helvetica Neue, Roboto, sans-serif;
   text-align: center;
 }
 
