--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -79,7 +79,7 @@
 
       <div class="collapse navbar-collapse home-menu" id="myNavbar">
         <ul class="nav navbar-nav my-nav-bar <%= user_signed_in? ? 'last-nav-item' : ''%>">
-          <li id="nav-home"><a href="#identity">HOME</a></li>
+          <li id="nav-home"><a href="#identity_top">HOME</a></li>
           <li id="nav-influencer-marketing"><a href="#what_is_influencer_marketing">ABOUT US</a></li>
           <li id="nav-influencers"><a href="#influencers">INFLUENCERS</a></li>
           <li id="nav-brands"><a href="#brands">BRANDS</a></li>
@@ -155,28 +155,28 @@
 
         $('#nav-influencer-marketing a').click(function(){
             $('html, body').animate({
-                scrollTop: $( $.attr(this, 'href') ).offset().top
+                scrollTop: $( $.attr(this, 'href') ).offset().top - 50
             }, 1000);
             return false;
         });
 
         $('#nav-influencers a').click(function(){
           $('html, body').animate({
-            scrollTop: $( $.attr(this, 'href') ).offset().top
+            scrollTop: $( $.attr(this, 'href') ).offset().top - 50
           }, 1000);
           return false;
         });
 
         $('#nav-brands a').click(function(){
           $('html, body').animate({
-            scrollTop: $( $.attr(this, 'href') ).offset().top
+            scrollTop: $( $.attr(this, 'href') ).offset().top - 50
           }, 1000);
           return false;
         });
 
         $('#nav-home a').click(function(){
           $('html, body').animate({
-            scrollTop: $( $.attr(this, 'href') ).offset().top
+            scrollTop: $( $.attr(this, 'href') ).offset().top - 100
           }, 1000);
           return false;
         });
