- Last 7 days mentioned at Total post reach - Not to mention India specifically in Statistics by Countries/Cities in Brand Explore Modal. Instead mention cities directly. - Under statistics by Country/Cities mention Post Reach for last one year. - In Brand Campaign page, post reach zero in colour data corrected - Influencer Images changed in homepage - Remove Forum Sujana from brands in Home page - Brand added in Brand homepage - Post Reach wise search included - Image validation in Brand Explore page modal removed - On clicking Influencer photo in homepage, the page fixed at Influencers section - Brand reach logo size increased

--- a/app/views/explores/show.html.erb
+++ b/app/views/explores/show.html.erb
@@ -68,6 +68,14 @@
             </div>
           </div>
         </div>
+        <div class="col-md-4">
+          <div class="row">
+            <div class="col-md-12">
+              <label for="post_reach"> Post Reach </label>
+              <%= select_tag 'post_reach', options_for_select(post_reach_drop_down), {id: 'explore-post-reach', prompt: 'Choose a range', class: ''} %>
+            </div>
+          </div>
+        </div>
       </div>
     </form>
   </div>
