--- a/app/views/facebook/_page_insights.html.erb
+++ b/app/views/facebook/_page_insights.html.erb
@@ -27,7 +27,7 @@
   <div class="info-box-custom col-md-3 col-sm-6 col-xs-6">
     <div class="info-box-content">
       <p class="info-box-data post-reach-data-color"><%= account.post_reach %></p>
-      <p class="info-box-text">POST REACH</p>
+      <p class="info-box-text">POST REACH( PAST 7 DAYS )</p>
     </div>
   </div>
 </div>
