--- a/app/views/public/home.html.erb
+++ b/app/views/public/home.html.erb
@@ -75,11 +75,11 @@
   <div class="wrapper-content">
     <div class="text-top few-brand helvetica-neue-light">Few of our Influencers</div>
     <div class="brands-block">
-      <span><a href="#" data-toggle="popover" title="2.3M Followers"><%= image_tag('Hrithik_Roshan.png', :class => 'influencers-picture') %></a></span>
-      <span><a href="#" data-toggle="popover" title="2.5M Followers"><%= image_tag('Akshay-kumar.png', :class => 'influencers-picture') %></a></span>
-      <span><a href="#" data-toggle="popover" title="2.9M Followers"><%= image_tag('shahrukh-khan.png', :class => 'influencers-picture') %></a></span>
-      <span><a href="#" data-toggle="popover" title="1.3M Followers"><%= image_tag('katrina-kaif.png', :class => 'influencers-picture') %></a></span>
-      <span><a href="#" data-toggle="popover" title="1.9M Followers"><%= image_tag('taylor-swift.png', :class => 'influencers-picture') %></a></span>
+      <span><a href="#" onclick="return false" data-toggle="popover" title="Akhil Akkineni" ><%= image_tag('akhil_akkineni.jpg', :class => 'influencers-picture') %></a></span>
+      <span><a href="#" onclick="return false" data-toggle="popover" title="Girls Facts"><%= image_tag('girls_facts.jpg', :class => 'influencers-picture') %></a></span>
+      <span><a href="#" onclick="return false" data-toggle="popover" title="Laksmi Rai"><%= image_tag('laksmi_rai.jpg', :class => 'influencers-picture') %></a></span>
+      <span><a href="#" onclick="return false" data-toggle="popover" title="Shraddha Das"><%= image_tag('shraddha_das.jpg', :class => 'influencers-picture') %></a></span>
+      <span><a href="#" onclick="return false" data-toggle="popover" title="Back Benchers"><%= image_tag('back_benchers.jpg', :class => 'influencers-picture') %></a></span>
     </div>
   </div>
 </div>
