- In Brand Explore page, country dropdown removed. Now brands can search only with state names.
- In Brand Campaign page, now expired campaigns are shown.

--- a/app/assets/stylesheets/brands-explore.css
+++ b/app/assets/stylesheets/brands-explore.css
@@ -24,6 +24,7 @@
 .brands-explore-advance-search .selectBox{
     width: 100% !important;
     padding: 2px;
+    background-color: #f9f9f9;
 }
 
 .brands-explore-advance-search label {
