--- a/app/views/public/home.html.erb
+++ b/app/views/public/home.html.erb
@@ -1,4 +1,7 @@
-<%= stylesheet_link_tag 'brands_home', media: 'all', 'data-turbolinks-track' => true %>
+<% content_for :head do %>
+    <%= stylesheet_link_tag 'brands_home', media: 'all', 'data-turbolinks-track' => true %>
+<% end %>
+
 
 <% title 'Influencers Home | The Brand Reach' %>
 
