--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -19,6 +19,7 @@
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
 
+  <%= yield(:head) %>
   <%= csrf_meta_tags %>
 </head>
 <body>
