--- a/app/views/shared/_sub_region_select.html.erb
+++ b/app/views/shared/_sub_region_select.html.erb
@@ -5,7 +5,7 @@
   <% if country.nil? %>
       <select class="country-responsive-font double-arrow-select-icon" name="state"><option value="">Select State</option></select>
   <% elsif country.subregions? %>
-      <%= subregion_select(:user, :state, parent_region, {prompt: 'Select state'},
+      <%= subregion_select(:user, :state, parent_region, {prompt: 'Select State'},
                            { :class => 'profile-dropdown-color country-responsive-font double-arrow-select-icon', data:{'parsley-required' => 'true'} }) %>
   <% else %>
       <%= text_field(:user, :state) %>
